2012-11-04  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	[BZ #3665]
	* sysdeps/mach/hurd/bits/errno.h: Regenerated.

2012-11-04  Thomas Schwinge  <thomas@codesourcery.com>

	* csu/libc-start.c (LIBC_START_MAIN): Conditionalize use of
	PTR_DEMANGLE.

	[BZ #5246]
	* sysdeps/mach/hurd/i386/____longjmp_chk.S: Conditionalize use of
	PTR_DEMANGLE.

2012-11-04  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14797]
	* sysdeps/ieee754/dbl-64/s_fma.c (__fma): Compute cases that
	definitely overflow as x * y not x * y + z.
	* sysdeps/ieee754/ldbl-128/s_fmal.c (__fmal): Likewise.
	* sysdeps/ieee754/ldbl-96/s_fmal.c (__fmal): Likewise.
	* math/libm-test.inc (fma_test): Add more tests.
	(fma_test_towardzero): Likewise.
	(fma_test_downward): Likewise.
	(fma_test_upward): Likewise.

2012-11-04  Thomas Schwinge  <thomas@codesourcery.com>

	[BZ #157]

	* include/stub-tag.h: Remove file.
	* sysdeps/unix/Makefile ($(objpfx)stub-syscalls.c): Don't emit
	'#include' of it.
	* manual/maint.texi (Porting): Don't reference it.
	* Makerules ($(objpfx)stubs): Likewise.
	* dirent/closedir.c: Don't include <stub-tag.h>.
	* dirent/dirfd.c: Likewise.
	* dirent/fdopendir.c: Likewise.
	* dirent/getdents.c: Likewise.
	* dirent/getdents64.c: Likewise.
	* dirent/opendir.c: Likewise.
	* dirent/readdir.c: Likewise.
	* dirent/readdir64.c: Likewise.
	* dirent/readdir64_r.c: Likewise.
	* dirent/readdir_r.c: Likewise.
	* dirent/rewinddir.c: Likewise.
	* dirent/seekdir.c: Likewise.
	* dirent/telldir.c: Likewise.
	* gmon/profil.c: Likewise.
	* grp/setgroups.c: Likewise.
	* inet/if_index.c: Likewise.
	* io/access.c: Likewise.
	* io/chdir.c: Likewise.
	* io/chmod.c: Likewise.
	* io/chown.c: Likewise.
	* io/close.c: Likewise.
	* io/dup.c: Likewise.
	* io/dup2.c: Likewise.
	* io/dup3.c: Likewise.
	* io/euidaccess.c: Likewise.
	* io/faccessat.c: Likewise.
	* io/fchdir.c: Likewise.
	* io/fchmod.c: Likewise.
	* io/fchmodat.c: Likewise.
	* io/fchown.c: Likewise.
	* io/fchownat.c: Likewise.